fix: aligned icons again

--- a/assets/css/components/nav.css
+++ b/assets/css/components/nav.css
@@ -166,7 +166,7 @@ nav.email-banner a {
 }
 
 .drop-over img {
-    height: 1.4rem;
+    height: 1.7rem;
 }
 
 .drop-over .small-entry {
